@@ -809,7 +809,7 @@ bytesio_sizeof(bytesio *self, void *unused)
 {
     Py_ssize_t res;
 
-    res = sizeof(bytesio);
+    res = _PyObject_SIZE(Py_TYPE(self));
     if (self->buf)
         res += self->buf_size;
     return PyLong_FromSsize_t(res);
